--- a/.github/workflows/clean_test_infra_on_demand.yml
+++ b/.github/workflows/clean_test_infra_on_demand.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Clean packaging infra
         uses: newrelic/fargate-runner-action@main
-        if: ${{ input.clean_packaging_infra }}
+        if: ${{ inputs.clean_packaging_infra }}
         with:
           aws_region: us-east-2
           container_make_target: "test/provision-clean TAG_OR_UNIQUE_NAME=otel-${{ inputs.unique_tag }}"
@@ -63,7 +63,7 @@ jobs:
             Destroy\scomplete!
       - name: Clean canary infra
         uses: newrelic/fargate-runner-action@main
-        if: ${{ input.clean_canary_infra }}
+        if: ${{ inputs.clean_canary_infra }}
         with:
           aws_region: us-east-2
           container_make_target: "test/provision-clean TAG_OR_UNIQUE_NAME=otel-canary:${{ inputs.unique_tag }}-${{ inputs.platform }}"
