--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,8 +1,8 @@
 name: . 🕵🏼 Security scanner
 on:
   schedule:
-    # Scheduled to run at 8 a.m on every day-of-week from Monday through Friday.
-    - cron:  '0 8 * * 1-5'
+    # Scheduled to run in the morning (PT) on every day-of-week from Monday through Friday.
+    - cron:  '0 15 * * 1-5'
   workflow_dispatch:
     inputs:
       tag:
