--- a/.github/workflows/component_trivy.yml
+++ b/.github/workflows/component_trivy.yml
@@ -33,6 +33,10 @@ jobs:
           ignore-unfixed: true
           vuln-type: "os,library"
           severity: "${{ inputs.severity }}"
+        env:
+          # dbs are downloaded async in download_trivy_db.yml
+          TRIVY_SKIP_DB_UPDATE: true
+          TRIVY_SKIP_JAVA_DB_UPDATE: true
 
   trivy_scanner_scheduled:
     name: Scheduled Trivy scanner for docker
