fix: Use ubuntu-22.04 to avoid rate limit

--- a/.github/workflows/component_trivy.yml
+++ b/.github/workflows/component_trivy.yml
@@ -21,7 +21,7 @@ on:
 jobs:
   trivy_scanner:
     name: Trivy scanner for docker
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: ${{ ! github.event.schedule }} # Table output
     steps:
       - name: newrelic/nr-otel-collector
@@ -40,7 +40,7 @@ jobs:
 
   trivy_scanner_scheduled:
     name: Scheduled Trivy scanner for docker
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: ${{ github.event.schedule }} # Upload sarif when running periodically
     steps:
       - name: Checkout
