--- a/.github/workflows/download_trivy_db.yml
+++ b/.github/workflows/download_trivy_db.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update-trivy-db:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Setup oras
         uses: oras-project/setup-oras@v1
