--- a/.github/workflows/component_trivy.yml
+++ b/.github/workflows/component_trivy.yml
@@ -21,11 +21,11 @@ on:
 jobs:
   trivy_scanner:
     name: Trivy scanner for docker
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: ${{ ! github.event.schedule }} # Table output
     steps:
       - name: newrelic/nr-otel-collector
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: "${{ inputs.image }}:${{ inputs.tag }}"
           format: "table"
@@ -33,17 +33,21 @@ jobs:
           ignore-unfixed: true
           vuln-type: "os,library"
           severity: "${{ inputs.severity }}"
+        env:
+          # dbs are downloaded async in download_trivy_db.yml
+          TRIVY_SKIP_DB_UPDATE: true
+          TRIVY_SKIP_JAVA_DB_UPDATE: true
 
   trivy_scanner_scheduled:
     name: Scheduled Trivy scanner for docker
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: ${{ github.event.schedule }} # Upload sarif when running periodically
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Sarif newrelic/nr-otel-collector
-        uses: aquasecurity/trivy-action@0.8.0
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: "${{ inputs.image }}:${{ inputs.tag }}"
           format: "sarif"
@@ -52,6 +56,10 @@ jobs:
           severity: "${{ inputs.severity }}"
           exit-code: "1"
           ignore-unfixed: true
+        env:
+          # dbs are downloaded async in download_trivy_db.yml
+          TRIVY_SKIP_DB_UPDATE: true
+          TRIVY_SKIP_JAVA_DB_UPDATE: true
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
@@ -67,7 +75,7 @@ jobs:
           # This data can be any valid JSON from a previous step in the GitHub Action
           payload: |
             {
-              "text": ":rotating_light: Hi CAOS (@hero), critical or high vulnerabilities found in NRDOT, see: https://github.com/newrelic/opentelemetry-collector-releases/security :rotating_light:"
+              "text": ":rotating_light: Hi from your Github Action, vulnerabilities found in NRDOT, see: https://github.com/newrelic/opentelemetry-collector-releases/security :rotating_light:"
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.slack_webhook }}
