--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -90,7 +90,7 @@ jobs:
           repo_base_url: "http://nr-downloads-ohai-staging.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
           package_name: ${{ env.NR_DISTRO }}
           package_version: ${{ env.NR_VERSION }}
-          platforms: "al2,al2023,centos8,debian-bullseye,debian-bookworm,redhat8,redhat9,suse15.2,suse15.3,suse15.4,ubuntu1604,ubuntu1804,ubuntu2004,ubuntu2204,ubuntu2404"
+          platforms: "ubuntu2204,ubuntu2404"
 
   packaging-tests:
     uses: ./.github/workflows/component_provision_packaging.yml
