--- a/.github/workflows/component_trivy.yml
+++ b/.github/workflows/component_trivy.yml
@@ -22,30 +22,7 @@ jobs:
   trivy_scanner:
     name: Trivy scanner for docker
     runs-on: ubuntu-22.04
-    if: ${{ ! github.event.schedule }} # Table output
     steps:
-      - name: newrelic/nr-otel-collector
-        uses: aquasecurity/trivy-action@0.28.0
-        with:
-          image-ref: "${{ inputs.image }}:${{ inputs.tag }}"
-          format: "table"
-          exit-code: "1"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "${{ inputs.severity }}"
-        env:
-          # dbs are downloaded async in download_trivy_db.yml
-          TRIVY_SKIP_DB_UPDATE: true
-          TRIVY_SKIP_JAVA_DB_UPDATE: true
-
-  trivy_scanner_scheduled:
-    name: Scheduled Trivy scanner for docker
-    runs-on: ubuntu-22.04
-    if: ${{ github.event.schedule }} # Upload sarif when running periodically
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
       - name: Sarif newrelic/nr-otel-collector
         uses: aquasecurity/trivy-action@0.28.0
         with:
@@ -62,15 +39,15 @@ jobs:
           TRIVY_SKIP_JAVA_DB_UPDATE: true
 
       - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
-        if: ${{ always() }}
+        uses: github/codeql-action/upload-sarif@v3
+        if: ${{ inputs.tag == 'latest' }} # Upload sarif only for latest
         with:
           sarif_file: "trivy-results.sarif"
 
       - name: Send notification to Slack Workflow
         if: ${{ failure() }}
         id: slack
-        uses: slackapi/slack-github-action@v1.22.0
+        uses: slackapi/slack-github-action@v1.27.0
         with:
           # This data can be any valid JSON from a previous step in the GitHub Action
           payload: |
