--- a/.github/workflows/component_trivy.yml
+++ b/.github/workflows/component_trivy.yml
@@ -38,6 +38,9 @@ jobs:
           TRIVY_SKIP_DB_UPDATE: true
           TRIVY_SKIP_JAVA_DB_UPDATE: true
 
+      - name: Print Trivy scan results # action can't do both table/sarif output, so we just print the sarif file
+        run: |
+          cat trivy-results.sarif
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         if: ${{ inputs.tag == 'latest' }} # Upload sarif only for latest
