--- a/.github/workflows/component_trivy.yml
+++ b/.github/workflows/component_trivy.yml
@@ -39,6 +39,7 @@ jobs:
           TRIVY_SKIP_JAVA_DB_UPDATE: true
 
       - name: Print Trivy scan results # action can't do both table/sarif output, so we just print the sarif file
+        if: ${{ (success() || failure()) && inputs.tag == 'latest' }}
         run: |
           if [[ -s trivy-results.sarif ]]; then
             cat trivy-results.sarif
@@ -47,12 +48,13 @@ jobs:
           fi
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
-        if: ${{ inputs.tag == 'latest' }} # Upload sarif only for latest
+        # Upload sarif only for latest
+        if: ${{ (success() || failure()) && inputs.tag == 'latest' }}
         with:
           sarif_file: "trivy-results.sarif"
 
       - name: Send notification to Slack Workflow
-        if: ${{ failure() }}
+        if: ${{ failure() && inputs.tag == 'latest' }}
         id: slack
         uses: slackapi/slack-github-action@v1.27.0
         with:
