Log warn-level by default

--- a/.github/workflows/component_terraform.yml
+++ b/.github/workflows/component_terraform.yml
@@ -35,7 +35,7 @@ on:
         description: "Terraform log level (TRACE, DEBUG, INFO, WARN or ERROR)"
         type: string
         required: false
-        default: "INFO"
+        default: "WARN"
     secrets:
       aws_access_key_id:
         description: "AWS credentials for tf with permission to assume resource-provider"
