--- a/.github/workflows/debug_terraform.yml
+++ b/.github/workflows/debug_terraform.yml
@@ -35,7 +35,7 @@ on:
         description: "Terraform log level (TRACE, DEBUG, INFO, WARN or ERROR)"
         type: string
         required: false
-        default: "INFO"
+        default: "WARN"
 
 jobs:
   terraform:
