--- a/test/e2e/hostmetrics/templates/daemonset.yaml
+++ b/test/e2e/hostmetrics/templates/daemonset.yaml
@@ -20,3 +20,8 @@ spec:
           imagePullPolicy: "{{ .Values.image.pullPolicy }}"
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: "http://validation-backend.hostmetrics.svc.cluster.local:4318"
+            - name: NEW_RELIC_MEMORY_LIMIT_MIB
+              value: "100"
