feat: Add assertion for validation backend logs

--- a/test/e2e/hostmetrics/templates/nr-otel-collector.yaml
+++ b/test/e2e/hostmetrics/templates/nr-otel-collector.yaml
@@ -9,7 +9,7 @@ spec:
     - name: nginx
       protocol: TCP
       nodePort: 30132
-      port: 13132
+      port: 13132 # nginx sidecar exposing healthcheckextension
   selector:
     app: nr-otel-collector
 ---
