--- a/test/e2e/kind-config.yaml
+++ b/test/e2e/kind-config.yaml
@@ -3,6 +3,6 @@ apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
   - role: control-plane
     extraPortMappings:
-      - containerPort: 30132
+      - containerPort: 30132 # NodePort exposing nginx sidecar
         hostPort: 30132
         listenAddress: 127.0.0.1
