--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           gpg_key: 'https://download.newrelic.com/infrastructure_agent/gpg/newrelic-infra.gpg'
           repo_base_url: "http://nr-downloads-ohai-staging.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
-          package_name: ${{ env.NR_DISTRO }}
+          package_name: nr-otel-collector
           package_version: ${{ env.NR_VERSION }}
           platforms: "ubuntu2204,ubuntu2404"
 
