--- a/test/e2e/hostmetrics/chart/templates/daemonset.yaml
+++ b/test/e2e/hostmetrics/chart/templates/daemonset.yaml
@@ -20,11 +20,14 @@ spec:
           image: busybox:latest
           imagePullPolicy: IfNotPresent
           command: [ "/bin/sh","-c" ]
-          args: [ 'while [ $(curl -ksw "%{http_code}" "http://validation-backend:8080" -o /dev/null) -ne 200 ]; do sleep 5; echo "health check failed . Waiting for validation service..."; done' ]
+          args: [ 'while [ $(curl -ksw "%{http_code}" "http://validation-backend:8080" -o /dev/null) -ne 200 ]; do sleep 5; echo "health check failed. Waiting for validation service..."; done' ]
       containers:
         - name: *app
-          image: newrelic/nr-otel-collector:latest
-          imagePullPolicy: Never
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: "{{ .Values.image.pullPolicy }}"
+          ports:
+            - name: health
+              containerPort: 13133
           env:
             - name: OTEL_EXPORTER_OTLP_ENDPOINT
               value: "http://validation-backend:4318"
