--- a/Makefile.common
+++ b/Makefile.common
@@ -29,7 +29,7 @@ third-party-notices:
 .PHONY: third-party-notices-check
 third-party-notices-check: third-party-notices
 	git diff --name-only | grep -q "THIRD_PARTY_NOTICES.md" \
-	    && { echo "Third party notices out of date, please run \"make licenses\" and commit the changes in this PR. Diff:"; git --no-pager diff HEAD -- '**/THIRD_PARTY_NOTICES.md'; exit 1; } \
+	    && { echo "Third party notices out of date, please run \"make licenses\" and commit the changes in this PR. Diff:"; git --no-pager diff HEAD -- 'THIRD_PARTY_NOTICES.md'; exit 1; } \
 	    || exit 0
 
 
