--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,6 +46,19 @@ jobs:
       - name: Extract image version
         run: echo "version=$(jq -r '.version' dist/metadata.json)" >> $GITHUB_ENV
 
+      - name: Setup local kind cluster
+        uses: helm/kind-action@v1
+        with:
+          version: v0.21.0
+          cluster_name: ci-e2etest
+          wait: 60s
+
+      - name: Run local e2e tests
+        run: |
+          export IMAGE_TAG=${{ env.version }}-rc-amd64
+          export KIND_CLUSTER_NAME=ci-e2etest
+          make -f ./test/e2e/Makefile ci_test
+
       - name: Trivy security check
         uses: aquasecurity/trivy-action@0.28.0
         with:
