--- a/test/charts/mocked_backend/Chart.yaml
+++ b/test/charts/mocked_backend/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: nr-otel-collector
-description: A Helm chart for deploying nr-otel-collector as a DaemonSet for test purposes
+name: nrdot-mocked-backend
+description: A Helm chart for deploying nr-otel-collector as a DaemonSet writing to a Mock Backend for assertions in tests
 version: 0.1.0
 appVersion: "1.0"
