--- a/.github/workflows/ci_nightly.yaml
+++ b/.github/workflows/ci_nightly.yaml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: 🔄 CI | Nightly
 
 on:
   workflow_dispatch:
@@ -29,6 +29,9 @@ jobs:
         with:
           go-version: '~1.22.3'
           check-latest: true
+
+      - name: Verify build
+        run: make ci
 
       - uses: docker/setup-qemu-action@v2
 
