ci: tag snapshots correctly in nightly

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # required for tag metadata
 
       - name: Setup Go
         uses: actions/setup-go@v5
