--- a/.github/workflows/ci_nightly.yaml
+++ b/.github/workflows/ci_nightly.yaml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ inputs.branch || 'main' }}
+          fetch-depth: 0 # required for tag metadata
 
       - name: Setup Go
         uses: actions/setup-go@v5
