ci: exclude fast tests from slow test run

--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -38,7 +38,8 @@ ci_test-fast: ci_load-image ci_build-load-mocked-otlp-image
 	cd ${THIS_MAKEFILE_DIR} && \
 	E2E_TEST__K8S_CONTEXT_NAME=${K8S_CONTEXT_NAME} \
 	E2E_TEST__IMAGE_TAG=${IMAGE_TAG} \
-	go test ./... -count=1 -short
+	E2E_TEST__TEST_MODE=fastOnly \
+	go test ./... -count=1
 
 .PHONY: ci_test-slow
 ci_test-slow: ci_load-image ci_build-load-mocked-otlp-image
@@ -50,6 +51,7 @@ ci_test-slow: ci_load-image ci_build-load-mocked-otlp-image
 	E2E_TEST__NR_API_KEY=${NR_API_KEY} \
 	E2E_TEST__NR_ACCOUNT_ID=${NR_ACCOUNT_ID} \
 	E2E_TEST__NR_API_BASE_URL=${NR_API_BASE_URL} \
+	E2E_TEST__TEST_MODE=slowOnly \
 	go test ./... -count=1
 
 ################
