Kbauer/fix nightly build 2 (#169)
* fix: tag snapshots correctly in nightly
* ci: exclude fast tests from slow test run
* chore: provide make target for different test modes

--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -34,14 +34,15 @@ ci_build-load-mocked-otlp-image: assert_cluster-exists
 	kind load docker-image mocked_otlp:latest --name ${KIND_CLUSTER_NAME}
 
 .PHONY: ci_test-fast
+ci_test-fast: TEST_MODE=fastOnly
 ci_test-fast: ci_load-image ci_build-load-mocked-otlp-image
-	cd ${THIS_MAKEFILE_DIR} && \
-	E2E_TEST__K8S_CONTEXT_NAME=${K8S_CONTEXT_NAME} \
-	E2E_TEST__IMAGE_TAG=${IMAGE_TAG} \
-	go test ./... -count=1 -short
 
 .PHONY: ci_test-slow
-ci_test-slow: ci_load-image ci_build-load-mocked-otlp-image
+ci_test-slow: TEST_MODE=slowOnly
+ci_test-slow: ci_load-image ci_build-load-mocked-otlp-image ci_test
+
+.PHONY: ci_test
+ci_test:
 	cd ${THIS_MAKEFILE_DIR} && \
 	E2E_TEST__K8S_CONTEXT_NAME=${K8S_CONTEXT_NAME} \
 	E2E_TEST__IMAGE_TAG=${IMAGE_TAG} \
@@ -50,6 +51,7 @@ ci_test-slow: ci_load-image ci_build-load-mocked-otlp-image
 	E2E_TEST__NR_API_KEY=${NR_API_KEY} \
 	E2E_TEST__NR_ACCOUNT_ID=${NR_ACCOUNT_ID} \
 	E2E_TEST__NR_API_BASE_URL=${NR_API_BASE_URL} \
+	E2E_TEST__TEST_MODE=${TEST_MODE} \
 	go test ./... -count=1
 
 ################
@@ -64,14 +66,18 @@ local_create-cluster-if-not-exists:
 local_build-image:
 	cd $(ROOT_DIR) && goreleaser --snapshot --clean --skip-sign
 
-.PHONY: local_test-fast
+.PHONY: local_test
 # hardcode an image you build with local_build-image, then run this target to run tests against it
 local_test: IMAGE_TAG=insert_locally_available_tag_to_test_here
-local_test: local_create-cluster-if-not-exists ci_test-fast
+local_test: local_create-cluster-if-not-exists ci_test
+
+.PHONY: local_test-fast
+local_test-fast: TEST_MODE=fastOnly
+local_test-fast: local_test
 
 .PHONY: local_test-slow
-local_test-slow: IMAGE_TAG=insert_locally_available_tag_to_test_here
-local_test-slow: local_create-cluster-if-not-exists ci_test-slow
+local_test-slow: TEST_MODE=slowOnly
+local_test-slow: local_test
 
 .PHONY: local_helm-cleanup
 local_helm-cleanup:
