--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '~1.22.3'
+          go-version: '1.23'
           check-latest: true
 
       - name: Verify build
@@ -40,11 +40,11 @@ jobs:
       - uses: docker/setup-buildx-action@v2
 
       - name: Build binaries & packages with GoReleaser
-        uses: goreleaser/goreleaser-action@v4
+        uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: '~> v1'
-          args: --snapshot --clean --skip-sign --timeout 2h
+          version: '~> v2'
+          args: --snapshot --clean --skip=sign --timeout 2h
 
       - name: Extract image version
         run: echo "version=$(jq -r '.version' dist/metadata.json)" >> $GITHUB_ENV
