chore: Moving .goreleaser configs into distribution folder

--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -45,6 +45,7 @@ jobs:
           distribution: goreleaser
           version: '~> v2'
           args: release --rm-dist --timeout 2h
+          workdir: distributions/nr-otel-collector
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_PASSPHRASE: ${{ secrets.OHAI_GPG_PASSPHRASE }}
